fix refactor component styles

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,3 +29,10 @@
 .font-weight-500 {
   font-weight: 500 !important;
 }
+.nav-tabs .nav-item .nav-link {
+  border-top: 2.5px solid #0063f7 !important;
+}
+.nav-tabs .nav-item .nav-link.active {
+  background-color: #0063f7 !important;
+  color: #fff !important;
+}
